add oauth to radarr

--- a/system/oauth2-proxy/templates/external-secrets.yaml
+++ b/system/oauth2-proxy/templates/external-secrets.yaml
@@ -15,7 +15,8 @@ spec:
         property: client-id
     - secretKey: client-secret
       remoteRef:
-        key: /oauth2-proxy/google
+        key: /oauth2-proxy/openssl rand -base64 32 | head -c 24
+
         property: client-secret
     - secretKey: cookie-secret
       remoteRef:
