--- a/system/oauth2-proxy/templates/external-secrets.yaml
+++ b/system/oauth2-proxy/templates/external-secrets.yaml
@@ -15,8 +15,7 @@ spec:
         property: client-id
     - secretKey: client-secret
       remoteRef:
-        key: /oauth2-proxy/openssl rand -base64 32 | head -c 24
-
+        key: /oauth2-proxy/google
         property: client-secret
     - secretKey: cookie-secret
       remoteRef:
