--- a/apps/elsuenodediana/values.yaml
+++ b/apps/elsuenodediana/values.yaml
@@ -129,5 +129,10 @@ app-template:
     config:
       enabled: true
       globalMounts:
-      - path: /
+      - path: /var/www/html
       existingClaim: config-elsuenodediana
+    presta_db:
+      enabled: true
+      globalMounts:
+      - path: /var/lib/mysql
+      existingClaim: db-elsuenodediana
