--- a/apps/elsuenodediana/values.yaml
+++ b/apps/elsuenodediana/values.yaml
@@ -16,6 +16,8 @@ app-template:
             DB_NAME: prestashop
             DB_USER: root
             DB_PASSWD: admin
+            PS_INSTALL_AUTO: 1
+            PS_DOMAIN: localhost:8080
 
           resources:
             requests:
