--- a/apps/elsuenodediana/values.yaml
+++ b/apps/elsuenodediana/values.yaml
@@ -2,7 +2,7 @@ app-template:
   controllers:
     elsuenodediana:
       labels:
-        backup/retain: quarterly
+        backup/retain: quaterly
       type: statefulset
       containers:
         elsuenodediana:
@@ -27,24 +27,14 @@ app-template:
               memory: 700Mi
 
           probes:
-            liveness:
+            liveness: &probe
               enabled: true
               custom: true
               spec:
                 httpGet:
                   path: /ping
-                  port: 80
-                initialDelaySeconds: 30
-                periodSeconds: 10
-            readiness:
-              enabled: true
-              custom: true
-              spec:
-                httpGet:
-                  path: /ping
-                  port: 80
-                initialDelaySeconds: 30
-                periodSeconds: 10
+                  port: &port 80
+            readiness: *probe
             startup:
               enabled: true
               spec:
@@ -53,7 +43,7 @@ app-template:
 
     mysql:
       labels:
-        backup/retain: quarterly
+        backup/retain: quaterly
       type: statefulset
       containers:
         mysql:
@@ -99,7 +89,7 @@ app-template:
       controller: elsuenodediana
       ports:
         http:
-          port: 80
+          port: *port
 
   ingress:
     elsuenodediana:
@@ -109,7 +99,7 @@ app-template:
         external-dns.alpha.kubernetes.io/enabled: "true"
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
       hosts:
-      - host: elsuenodediana.internal.dbcloud.org
+      - host: &host elsuenodediana.internal.dbcloud.org
         paths:
         - path: /
           pathType: Prefix
@@ -118,7 +108,7 @@ app-template:
             port: http
       tls:
       - hosts:
-        - elsuenodediana.internal.dbcloud.org
+        - *host
         secretName: elsuenodediana-tls-certificate
 
     external:
@@ -131,7 +121,7 @@ app-template:
         nginx.ingress.kubernetes.io/auth-url: https://auth.dbcloud.org/oauth2/auth
         nginx.ingress.kubernetes.io/auth-signin: https://auth.dbcloud.org/oauth2/start
       hosts:
-      - host: elsuenodediana.dbcloud.org
+      - host: &host elsuenodediana.dbcloud.org
         paths:
         - path: /
           pathType: Prefix
@@ -140,9 +130,8 @@ app-template:
             port: http
       tls:
       - hosts:
-        - elsuenodediana.dbcloud.org
+        - *host
         secretName: elsuenodediana-external-tls-certificate
-
   defaultPodOptions:
     securityContext:
       runAsUser: 995
@@ -155,9 +144,9 @@ app-template:
       enabled: true
       globalMounts:
       - path: /var/www/html
-        existingClaim: config-elsuenodediana
+      existingClaim: config-elsuenodediana
     db:
       enabled: true
       globalMounts:
       - path: /var/lib/mysql
-        existingClaim: db-elsuenodediana
+      existingClaim: db-elsuenodediana
