--- a/apps/elsuenodediana/values.yaml
+++ b/apps/elsuenodediana/values.yaml
@@ -2,14 +2,13 @@ app-template:
   controllers:
     elsuenodediana:
       labels:
-        backup/retain: quaterly
+        backup/retain: quarterly
       type: statefulset
       containers:
         elsuenodediana:
           image:
             repository: prestashop/prestashop
             tag: 8.1.5
-
           env:
             TZ: Europe/Madrid
             DB_SERVER: mysql
@@ -18,23 +17,27 @@ app-template:
             DB_PASSWD: admin
             PS_INSTALL_AUTO: 1
             PS_DOMAIN: localhost:8080
-
           resources:
             requests:
               cpu: 150m
               memory: 170Mi
             limits:
               memory: 700Mi
-
           probes:
-            liveness: &probe
+            liveness:
               enabled: true
               custom: true
               spec:
                 httpGet:
                   path: /ping
-                  port: &port 80
-            readiness: *probe
+                  port: 80
+            readiness:
+              enabled: true
+              custom: true
+              spec:
+                httpGet:
+                  path: /ping
+                  port: 80
             startup:
               enabled: true
               spec:
@@ -43,58 +46,57 @@ app-template:
 
     mysql:
       labels:
-        backup/retain: quaterly
+        backup/retain: quarterly
       type: statefulset
       containers:
         mysql:
           image:
             repository: mysql
             tag: 5.7
-
           env:
             MYSQL_ROOT_PASSWORD: admin
             MYSQL_DATABASE: prestashop
-
           resources:
             requests:
               cpu: 150m
               memory: 170Mi
             limits:
               memory: 700Mi
-
-          args:
-          - --explicit_defaults_for_timestamp=1
-          - --tls_version=TLSv1.2
-          - --tls_version=TLSv1.3
-
+          ports:
+          - containerPort: 3306
+            name: mysql
           probes:
             liveness:
               enabled: true
               custom: true
               spec:
-                httpGet:
-                  path: /ping
+                tcpSocket:
                   port: 3306
+                initialDelaySeconds: 30
+                periodSeconds: 10
             readiness:
               enabled: true
               custom: true
               spec:
-                httpGet:
-                  path: /ping
+                tcpSocket:
                   port: 3306
+                initialDelaySeconds: 5
+                periodSeconds: 10
             startup:
               enabled: true
               spec:
-                failureThreshold: 60
+                tcpSocket:
+                  port: 3306
+                initialDelaySeconds: 10
                 periodSeconds: 10
-
+                failureThreshold: 60
 
   service:
     elsuenodediana:
       controller: elsuenodediana
       ports:
         http:
-          port: *port
+          port: 80
 
   ingress:
     elsuenodediana:
@@ -104,7 +106,7 @@ app-template:
         external-dns.alpha.kubernetes.io/enabled: "true"
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
       hosts:
-      - host: &host elsuenodediana.internal.dbcloud.org
+      - host: elsuenodediana.internal.dbcloud.org
         paths:
         - path: /
           pathType: Prefix
@@ -113,7 +115,7 @@ app-template:
             port: http
       tls:
       - hosts:
-        - *host
+        - elsuenodediana.internal.dbcloud.org
         secretName: elsuenodediana-tls-certificate
 
     external:
@@ -126,7 +128,7 @@ app-template:
         nginx.ingress.kubernetes.io/auth-url: https://auth.dbcloud.org/oauth2/auth
         nginx.ingress.kubernetes.io/auth-signin: https://auth.dbcloud.org/oauth2/start
       hosts:
-      - host: &host elsuenodediana.dbcloud.org
+      - host: elsuenodediana.dbcloud.org
         paths:
         - path: /
           pathType: Prefix
@@ -135,7 +137,7 @@ app-template:
             port: http
       tls:
       - hosts:
-        - *host
+        - elsuenodediana.dbcloud.org
         secretName: elsuenodediana-external-tls-certificate
   defaultPodOptions:
     securityContext:
@@ -149,9 +151,9 @@ app-template:
       enabled: true
       globalMounts:
       - path: /var/www/html
-      existingClaim: config-elsuenodediana
+        existingClaim: config-elsuenodediana
     db:
       enabled: true
       globalMounts:
       - path: /var/lib/mysql
-      existingClaim: db-elsuenodediana
+        existingClaim: db-elsuenodediana
