--- a/apps/elsuenodediana/values.yaml
+++ b/apps/elsuenodediana/values.yaml
@@ -53,7 +53,7 @@ app-template:
       controller: elsuenodediana
       ports:
         http:
-          port: *port
+          port: 80
 
   ingress:
     elsuenodediana:
