--- a/apps/elsuenodediana/values.yaml
+++ b/apps/elsuenodediana/values.yaml
@@ -16,6 +16,8 @@ app-template:
             DB_NAME: prestashop
             DB_USER: root
             DB_PASSWD: admin
+            PS_FOLDER_ADMIN: admin8491
+            PS_FOLDER_INSTALL: install8491
 
           resources:
             requests:
@@ -23,6 +25,9 @@ app-template:
               memory: 170Mi
             limits:
               memory: 700Mi
+          ports:
+          - containerPort: 80
+            name: elsuenodediana
 
 
     mysql:
@@ -46,6 +51,30 @@ app-template:
           ports:
           - containerPort: 3306
             name: mysql
+
+
+    phpmyadmin-elsuenodediana:
+      labels:
+        backup/retain: quarterly
+      type: statefulset
+      containers:
+        phpmyadmin-elsuenodediana:
+          image:
+            repository: phpmyadmin/phpmyadmin
+            tag: latest
+          env:
+            PMA_HOST: mysql
+            PMA_PORT: 3306
+            PMA_ARBITRARY: 1
+          resources:
+            requests:
+              cpu: 150m
+              memory: 170Mi
+            limits:
+              memory: 700Mi
+          ports:
+          - containerPort: 80
+            name: phpmyadmin-elsuenodediana
 
 
   service:
@@ -74,6 +103,25 @@ app-template:
       - hosts:
         - *host
         secretName: elsuenodediana-tls-certificate
+
+    phpmyadmin-elsuenodediana:
+      enabled: true
+      className: nginx-internal
+      annotations:
+        external-dns.alpha.kubernetes.io/enabled: "true"
+        cert-manager.io/cluster-issuer: letsencrypt-prod-dns
+      hosts:
+      - host: &host phpmyadmin-elsuenodediana.internal.dbcloud.org
+        paths:
+        - path: /
+          pathType: Prefix
+          service:
+            identifier: phpmyadmin-elsuenodediana
+            port: http
+      tls:
+      - hosts:
+        - *host
+        secretName: phpmyadmin-elsuenodediana-tls-certificate
 
     external:
       enabled: true
