--- a/apps/elsuenodediana/values.yaml
+++ b/apps/elsuenodediana/values.yaml
@@ -84,6 +84,12 @@ app-template:
         http:
           port: 80
 
+    phpmyadmin-elsuenodediana:
+      controller: phpmyadmin-elsuenodediana
+      ports:
+        http:
+          port: 80
+
   ingress:
     elsuenodediana:
       enabled: true
